# This project is forked from https://github.com/marshmallow-code/marshmallow-sqlalchemy

[project]
name = "toasted-marshmallow-sqlalchemy"
version = "1.0.0"
description = "SQLAlchemy integration with the toasted-marshmallow (de)serialization library, forked from marshmallow-code/marshmallow-sqlalchemy"
readme = "README.rst"
license = { file = "LICENSE" }
maintainers = [{ name = "Joey Mart", email = "josefdavidmart@gmail.com" }]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = ["toastedmarshmallow>=2.15.2", "SQLAlchemy>=1.4.40,<3.0"]

[project.urls]
Changelog = "https://marshmallow-sqlalchemy.readthedocs.io/en/latest/changelog.html"
Funding = "https://opencollective.com/marshmallow"
Issues = "https://github.com/joeymart/toasted-marshmallow-sqlalchemy/issues"
Source = "https://github.com/joeymart/toasted-marshmallow-sqlalchemy"

[project.optional-dependencies]
docs = ["sphinx==7.2.6", "alabaster==0.7.16", "sphinx-issues==4.0.0"]
# TODO: Remove pytest pin when https://github.com/TvoroG/pytest-lazy-fixture/issues/65 is resolved
tests = ["pytest<8", "pytest-lazy-fixture>=0.6.2"]
dev = ["toasted-marshmallow-sqlalchemy[tests]", "tox", "pre-commit~=3.5"]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = ["docs/", "tests/", "CHANGELOG.rst", "CONTRIBUTING.rst", "tox.ini"]
exclude = ["docs/_build/"]

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true
show-source = true

[tool.ruff.lint]
ignore = ["E203", "E266", "E501", "E731"]
select = [
  "B",  # flake8-bugbear
  "E",  # pycodestyle error
  "F",  # pyflakes
  "I",  # isort
  "UP", # pyupgrade
  "W",  # pycodestyle warning
]
